--- a/templates/booktest/index.html
+++ b/templates/booktest/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <ul>
-    {% for book in list %}
-        <li>{{book.btitle}}</li>
+    {% for book in list1 %}
+        <li>{{book.btitle}}--{{book.bread}}--{{book.bcomment}}</li>
     {% endfor %}
 </ul>
+{#{{list1}}#}
 </body>
 </html>
